Fixed h1 text being covered by before@

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -5,7 +5,6 @@
 	overflow-y: auto;
 	-webkit-perspective: 1px;
 	transform-style: preserve-3d;
-
 }
 
 .slide {
@@ -60,9 +59,13 @@
 	background-size: cover;
 	background-image: url("/images/about.jpg");
 	background-attachment: fixed;
-	text-align: center;
-	color: $brand-color;
+	color: $white;
 	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+
+	h1 {
+		position: relative;
+		display: block;
+	}
 
 	&:before {
 	    content: '';
