--- a/_sass/_text.scss
+++ b/_sass/_text.scss
@@ -64,6 +64,10 @@ h2, h3, h4 {
   margin-bottom: 20px;
 }
 
+h1 {
+  font-size: 40px;
+}
+
 h2 {
     font-size: 32px;
     color: $header;
